# font-tools

./: .gitignore  CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  README.md  crates.js  deny.toml  help.html  settings.html  src-files.js
.github/workflows/: ci.yml
crates/font-subset/: Cargo.toml  README.md
crates/font-subset/src/: errors.rs  lib.rs  subset.rs
crates/font-subset/src/font/: cmap.rs  glyph.rs  mod.rs
crates/font-subset/src/tests/: mod.rs
crates/font-subset/src/write/: brotli.rs  mod.rs
examples/: test.html
font_subset/: all.html  enum.ParseErrorKind.html  index.html  sidebar-items.js  struct.Font.html  struct.FontSubset.html  struct.ParseError.html  struct.TableTag.html
font_subset/errors/: enum.ParseErrorKind.html  struct.ParseError.html
font_subset/font/: struct.Font.html  struct.TableTag.html
font_subset/subset/: struct.FontSubset.html
search.index/: 0621c283bdc0.js  1a1821912097.js  728fbc069218.js  783dd0f0681f.js  root.js
search.index/crateNames/: 286591022976.js
search.index/desc/: 55a4a5203b6c.js
search.index/entry/: 2311bf90448a.js
search.index/function/: 4a17f846dd43.js
search.index/generic_inverted_index/: bdb17e04690b.js
search.index/name/: 47c53fe085ca.js
search.index/normalizedName/: 6997312dd67a.js
search.index/path/: 7016f494a146.js
search.index/type/: 242a464e45f2.js
src/: errors.rs  font.rs  lib.rs  subset.rs  write.rs
src/font/: cmap.rs  glyph.rs  mod.rs
src/font_subset/: errors.rs.html  lib.rs.html  subset.rs.html
src/font_subset/font/: cmap.rs.html  glyph.rs.html  mod.rs.html
src/font_subset/write/: brotli.rs.html  mod.rs.html
src/tests/: mod.rs  test.html
src/write/: brotli.rs  mod.rs
trait.impl/core/clone/: trait.Clone.js
trait.impl/core/cmp/: trait.Eq.js  trait.PartialEq.js
trait.impl/core/convert/: trait.From.js
trait.impl/core/error/: trait.Error.js
trait.impl/core/fmt/: trait.Debug.js  trait.Display.js
trait.impl/core/marker/: trait.Copy.js  trait.Freeze.js  trait.Send.js  trait.StructuralPartialEq.js  trait.Sync.js  trait.Unpin.js  trait.UnsafeUnpin.js
trait.impl/core/panic/unwind_safe/: trait.RefUnwindSafe.js  trait.UnwindSafe.js
