[package]
name = "font-tools" # FIXME
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.82"

[dependencies]
brotli = { version = "8", default-features = false }

[dev-dependencies]
allsorts = "0.15.1"
tempfile = "3.23.0"
test-casing = "0.1.3"
