[workspace]
members = ["crates/font-subset"]
resolver = "2"

[workspace.package]
version = "0.1.0"
authors = ["Alex Ostrovski <ostrovski.alex@gmail.com>"]
edition = "2021"
rust-version = "1.83"
license = "MIT OR Apache-2.0"
repository = "https://github.com/slowli/font-tools"

[workspace.dependencies]
# External dependencies
allsorts = "0.15.1"
brotli = { version = "8", default-features = false }
doc-comment = "0.3.4"
tempfile = "3.23.0"
test-casing = "0.1.3"
version-sync = "0.9.5"

[workspace.lints.rust]
missing_docs = "warn"
missing_debug_implementations = "warn"
unreachable_pub = "warn"

[workspace.lints.clippy]
all = { level = "warn", priority = -1 }
pedantic = { level = "warn", priority = -1 }
must_use_candidate = "allow"
module_name_repetitions = "allow"
