[package]
name = "font-subset"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
brotli.workspace = true

[dev-dependencies]
allsorts.workspace = true
tempfile.workspace = true
test-casing.workspace = true

[lints]
workspace = true
