[package]
name = "font-subset"
version.workspace = true
authors.workspace = true
edition.workspace = true
rust-version.workspace = true

[dependencies]
brotli.workspace = true

[dev-dependencies]
allsorts.workspace = true
tempfile.workspace = true
test-casing.workspace = true

[features]
default = []
# Enables `std`-specific functionality, such as `Error` trait implementations for error types.
std = []

[lints]
workspace = true
